# jaxdp

./: .gitignore  CITATION.cff  CONTRIBUTING.md  Dockerfile  LICENCE.txt  README.md  pyproject.toml  requirements.txt  setup.py
examples/: README.md  algorithms.py  benchmark.py  iterations.ipynb  learning.ipynb  loop.py  planning.ipynb  plot_training.ipynb  plot_util.py  plotting.py  q-learning.ipynb  requirements.txt  requirements_example.txt  tabular-q-learning-mdp-sync-sample.py  tabular-q-learning-mdp.py  tabular-q-learning-mujoco.py  utils.py  value-iteration.py
jaxdp/: __init__.py  algorithm.py  base.py  iterations.py  runner.py  test_base.py  typehints.py  utils.py  vi.py
jaxdp/iterations/: __init__.py  algorithms.py  base.py  iteration.py  pi.py  qpi.py  vi.py
jaxdp/learning/: algorithms.py  learning.py  q_learning.py  reporter.py  runner.py  sampler.py  traces.py
jaxdp/mdp/: __init__.py  delayed_reward.py  forest_mdp.py  garnet.py  grid_world.py  gridworld.py  mdp.py  sampler.py  sequential.py  simple_graph.py  tictactoe.py  tree_mdp.py
jaxdp/mdp/sampler/: gym.py  mdp.py
jaxdp/planning/: algorithms.py  runner.py
test/: test_base.py
test/mdp_data/: cyclic.json  exploitable.json  random_exploitable.json  sequential.json  tree.json
